@@ -36,12 +36,9 @@ public class pgpFileServiceImpl implements PGPFileService {
             decryptFile(tmpEncryptedFile.getAbsolutePath(), tmpDecryptedFile.getAbsolutePath(), privateKeyPath, passphrase);
 
             // Read decrypted content
-            String decryptedContent = new String(java.nio.file.Files.readAllBytes(tmpDecryptedFile.toPath()), StandardCharsets.UTF_8);
+            String decryptedContent = java.nio.file.Files.readString(tmpDecryptedFile.toPath());
 
             logger.debug("Decrypted Content: " + decryptedContent);
-            if (!decryptedContent.trim().startsWith("{") && !decryptedContent.trim().startsWith("[")) {
-                throw new Exception("Decrypted content is not valid JSON: " + decryptedContent);
-            }
 
             ObjectMapper objectMapper = new ObjectMapper();
             return objectMapper.readValue(tmpDecryptedFile, Object.class);
@@ -59,65 +56,6 @@ public class pgpFileServiceImpl implements PGPFileService {
         }
     }
 
-//    private void decryptFile(String encryptedFilePath, String outputFilePath, String privateKeyPath, String passphrase) throws Exception {
-//        try (FileInputStream keyIn = new FileInputStream(privateKeyPath);
-//             FileInputStream encryptedFile = new FileInputStream(encryptedFilePath);
-//             FileOutputStream outputFile = new FileOutputStream(outputFilePath)) {
-//
-//            // Logging the start of decryption process
-//            logger.debug("Starting decryption using private key: " + privateKeyPath);
-//
-//            PGPSecretKeyRingCollection secretKeys = new PGPSecretKeyRingCollection(PGPUtil.getDecoderStream(keyIn), new BcKeyFingerprintCalculator());
-//
-//            PGPObjectFactory objectFactory = new PGPObjectFactory(PGPUtil.getDecoderStream(encryptedFile), new BcKeyFingerprintCalculator());
-//            Object obj = objectFactory.nextObject();
-//
-//            if (!(obj instanceof PGPEncryptedDataList)) {
-//                obj = objectFactory.nextObject();
-//            }
-//
-//            PGPEncryptedDataList encryptedDataList = (PGPEncryptedDataList) obj;
-//            PGPPrivateKey privateKey = null;
-//            PGPPublicKeyEncryptedData encryptedData = null;
-//
-//            // Log the list of encrypted data objects
-//            logger.debug("Found " + encryptedDataList.size() + " encrypted data entries.");
-//
-//            for (PGPEncryptedData data : encryptedDataList) {
-//                PGPPublicKeyEncryptedData pked = (PGPPublicKeyEncryptedData) data;
-//                privateKey = findPrivateKey(secretKeys, pked.getKeyID(), passphrase.toCharArray());
-//
-//                if (privateKey != null) {
-//                    encryptedData = pked;
-//                    logger.debug("Private key found and used for decryption.");
-//                    break;
-//                }
-//            }
-//
-//            if (privateKey == null) {
-//                logger.error("Private key for decryption not found.");
-//                throw new IllegalArgumentException("Private key for decryption not found.");
-//            }
-//
-//            InputStream clearData = encryptedData.getDataStream(new BcPublicKeyDataDecryptorFactory(privateKey));
-//            try (OutputStreamWriter writer = new OutputStreamWriter(outputFile, StandardCharsets.UTF_8)) {
-//                byte[] buffer = new byte[1 << 16];
-//                int bytesRead;
-//                while ((bytesRead = clearData.read(buffer)) != -1) {
-//                    writer.write(new String(buffer, 0, bytesRead, StandardCharsets.UTF_8));
-//                }
-//            }
-//            byte[] buffer = new byte[1 << 16];
-//            int bytesRead;
-//
-//            while ((bytesRead = clearData.read(buffer)) != -1) {
-//                outputFile.write(buffer, 0, bytesRead);
-//            }
-//
-//            logger.debug("Decryption completed successfully.");
-//        }
-//    }
-
     private void decryptFile(String encryptedFilePath, String outputFilePath, String privateKeyPath, String passphrase) throws Exception {
         try (FileInputStream keyIn = new FileInputStream(privateKeyPath);
              FileInputStream encryptedFile = new FileInputStream(encryptedFilePath);
@@ -126,31 +64,26 @@ public class pgpFileServiceImpl implements PGPFileService {
             // Logging the start of decryption process
             logger.debug("Starting decryption using private key: " + privateKeyPath);
 
-            // Load secret keys
-            PGPSecretKeyRingCollection secretKeys = new PGPSecretKeyRingCollection(
-                    PGPUtil.getDecoderStream(keyIn),
-                    new BcKeyFingerprintCalculator()
-            );
+            PGPSecretKeyRingCollection secretKeys = new PGPSecretKeyRingCollection(PGPUtil.getDecoderStream(keyIn), new BcKeyFingerprintCalculator());
 
-            // Parse encrypted data
-            PGPObjectFactory objectFactory = new PGPObjectFactory(
-                    PGPUtil.getDecoderStream(encryptedFile),
-                    new BcKeyFingerprintCalculator()
-            );
-
+            PGPObjectFactory objectFactory = new PGPObjectFactory(PGPUtil.getDecoderStream(encryptedFile), new BcKeyFingerprintCalculator());
             Object obj = objectFactory.nextObject();
+
             if (!(obj instanceof PGPEncryptedDataList)) {
-                obj = objectFactory.nextObject(); // Skip other headers
+                obj = objectFactory.nextObject();
             }
 
             PGPEncryptedDataList encryptedDataList = (PGPEncryptedDataList) obj;
             PGPPrivateKey privateKey = null;
             PGPPublicKeyEncryptedData encryptedData = null;
 
-            // Find the correct private key for decryption
+            // Log the list of encrypted data objects
+            logger.debug("Found " + encryptedDataList.size() + " encrypted data entries.");
+
             for (PGPEncryptedData data : encryptedDataList) {
                 PGPPublicKeyEncryptedData pked = (PGPPublicKeyEncryptedData) data;
                 privateKey = findPrivateKey(secretKeys, pked.getKeyID(), passphrase.toCharArray());
+
                 if (privateKey != null) {
                     encryptedData = pked;
                     logger.debug("Private key found and used for decryption.");
@@ -163,23 +96,24 @@ public class pgpFileServiceImpl implements PGPFileService {
                 throw new IllegalArgumentException("Private key for decryption not found.");
             }
 
-            // Decrypt data
-            try (InputStream clearData = encryptedData.getDataStream(
-                    new BcPublicKeyDataDecryptorFactory(privateKey))) {
-                byte[] buffer = new byte[8192]; // Use a reasonable buffer size
+            InputStream clearData = encryptedData.getDataStream(new BcPublicKeyDataDecryptorFactory(privateKey));
+            try (OutputStreamWriter writer = new OutputStreamWriter(outputFile, StandardCharsets.UTF_8)) {
+                byte[] buffer = new byte[1 << 16];
                 int bytesRead;
                 while ((bytesRead = clearData.read(buffer)) != -1) {
-                    outputFile.write(buffer, 0, bytesRead); // Write directly to file
+                    writer.write(new String(buffer, 0, bytesRead, StandardCharsets.UTF_8));
                 }
+            }
+            byte[] buffer = new byte[1 << 16];
+            int bytesRead;
+
+            while ((bytesRead = clearData.read(buffer)) != -1) {
+                outputFile.write(buffer, 0, bytesRead);
             }
 
             logger.debug("Decryption completed successfully.");
-        } catch (Exception e) {
-            logger.error("Error during decryption", e);
-            throw e;
         }
     }
-
 
     private PGPPrivateKey findPrivateKey(PGPSecretKeyRingCollection secretKeys, long keyID, char[] passphrase) throws PGPException {
         PGPSecretKey secretKey = secretKeys.getSecretKey(keyID);
